fix: overflow

--- a/app/[lang]/company/[keyword]/components/ChatPanel/index.module.scss
+++ b/app/[lang]/company/[keyword]/components/ChatPanel/index.module.scss
@@ -19,7 +19,7 @@
   width: 48px;
   height: 48px;
   border-radius: 50%;
-  background-color: gray;
+  background-color: transparent;
   margin-right: 10px;
 }
 .chatContent {
